overflow on footer issue fix

--- a/TournamentPlanner.Interactor/src/app/app.component.scss
+++ b/TournamentPlanner.Interactor/src/app/app.component.scss
@@ -1,6 +1,6 @@
 .container {
-  height: 100vh;
+  min-height: 100vh;
   padding: 1rem;
-  overflow: auto;
+  // overflow: auto;
  // background-color: lightblue;
 }
